# piksel-notebooks

./: .gitignore  README.md  pyproject.toml
English/Beginners_Guide/: 01_Jupyter_101.ipynb  02_Getting_Started_With_OpenDataCube.ipynb  03_Landsat_SR_GettingStarted.ipynb  03_Landsat_ST_GettingStarted.ipynb  04_Sentinel-2_GettingStarted.ipynb  05_BasicAnalysis.ipynb  Getting_Started_With_OpenDataCube.ipynb  Landsat_GettingStarted.ipynb  Landsat_SR_GettingStarted.ipynb  Landsat_ST_GettingStarted.ipynb  S2_l2a_Loading and Plotting.ipynb  Sentinel-2_GettingStarted.ipynb  coastal.ipynb
English/Case_Studies/: 00_Do_It_Yourself.ipynb  01_Landsat_CloudFree_GeoMAD.ipynb  01_Sentinel-1_Water.ipynb  02_LandsatSentinel-2_Intertidal_Elevation.ipynb  03_Landsat_CoastalChange.ipynb  04_Sentinel-2_MachineLearning.ipynb  05_Data_Interoperability.ipynb  Landsat_CloudFree_GeoMAD.ipynb  coastal_erosion.ipynb
English/Case_Studies/data/: NusaTenggaraBarat_tdata.geojson  training_revised.geojson
English/Teguh_Exercise/: CoastalChange.ipynb  Coastal_erosion_dea.ipynb  Tangerang_rate_of_change.gpkg  Tangerang_shorlines.gpkg  makassar_rate_of_change.gpkg
Indonesia/01-Panduan-Pengguna/: 00-About.ipynb  01_Jupyter_notebooks.ipynb  01_Python.ipynb  02_Jupyter_notebook.ipynb  02_Product_dan_measurement.ipynb  03_Membuka_data.ipynb  03_Product_dan_measurement.ipynb  04_Membuka_data.ipynb  04_Plotting.ipynb  05_Analisis_dasar.ipynb  05_Plotting.ipynb  06_Analisis_dasar.ipynb  06_numpy.ipynb  07_Numpy.ipynb  07_Pengenalan_xarray.ipynb  08_Parallel_processing_dgn_dask.ipynb  08_Xarray.ipynb  09_Dask.ipynb  =1.10.0  xxx.ipynb
Tools/: pyproject.toml
Tools/piksel/: __init__.py  utils.py
