[project]
name = "piksel"
dynamic = ["version"]
description = "Tools to support the BIG Piksel project"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Alex Leith", email = "alex@auspatious.com" },
]
keywords = ["data"]

dependencies = [
    "hatchling==1.27.0",
    "hatch-vcs==0.5.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
root = ".."

[tool.hatch.build.hooks.vcs]
version-file = "Tools/piksel/_version.py"
root = ".."

[tool.hatch.build]
include = ["Tools/piksel/**.py"]

[tool.hatch.build.targets.wheel]
packages = ["Tools/piksel"]

[tool.ruff]
ignore = ["E501"]
fix = true

[tool.ruff.lint]
extend-select = ["ANN", "I", "RUF", "UP"]

[tool.mypy]
ignore_missing_imports = true
strict = true
